spacing issue solved

--- a/src/scss/components/_slick.scss
+++ b/src/scss/components/_slick.scss
@@ -369,6 +369,8 @@
 .slick-slider{
     ul.slick-dots{
         li{
+            height: auto;
+            width: auto;
             button{
                 &::before{
                     display: none;
